--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "EVAPIConnection": "Data Source=EVDatabase.sqlite"
 }
